comandos básicos implementados. Faltam apenas os de copiar