@@ -4,28 +4,30 @@ import java.io.Serializable;
 import java.sql.Timestamp;
 import java.util.Date;
 
+import br.com.code.simulador.utils.Utils;
+
 public abstract class FileSystemEntry implements Serializable {
     protected String name;
-    protected String path;
     protected Directory parent;
 
     protected Timestamp creationTime;
     protected Timestamp lastWriteTime;
 
+    public String invalidChars = "[\\\\/|*?<>]";
+
     protected FileSystemEntry(String name, Directory parent) {
-        // O nome não pode ser vazio, nem expaços em branco, nem conter /
-        if (name == null || name.trim().isEmpty() || name.contains("/")) {
+        name = Utils.removeInvalidChars(name.trim());
+
+        if (name == null || name.isBlank()) {
             throw new IllegalArgumentException("Nome inválido: " + name);
         }
 
-        // O pai não pode ser nulo
         if (parent == null) {
             throw new IllegalArgumentException("Diretório pai não pode ser nulo para uma entrada não raiz.");
         }
 
         this.name = name;
         this.parent = parent;
-        this.path = parent.getPath() + "/" + this.name;
         this.creationTime = getCurrentTimestamp();
         this.lastWriteTime = this.creationTime;
     }
@@ -34,7 +36,6 @@ public abstract class FileSystemEntry implements Serializable {
     protected FileSystemEntry() {
         this.name = "root";
         this.parent = null;
-        this.path = this.name;
     }
 
     public String getName() {
@@ -53,12 +54,21 @@ public abstract class FileSystemEntry implements Serializable {
         return creationTime;
     }
 
+    // Easier to call recursively than to modify the path
     public String getPath() {
-        return path;
+        if (this.parent == null) {
+            return "root";
+        }
+
+        return parent.getPath() + this.name + "/";
     }
 
     public String getType() {
         return isDirectory() ? "directory" : "file";
+    }
+
+    public void setName(String newName) {
+        name = newName;
     }
 
     public boolean isFile() {
@@ -73,6 +83,7 @@ public abstract class FileSystemEntry implements Serializable {
         this.lastWriteTime = time;
     }
 
+    // TODO: Better put on Utils.java?
     protected Timestamp getCurrentTimestamp() {
         Date dataAtual = new Date();
         return new Timestamp(dataAtual.getTime());
